fixed the searchbar animation on safari

--- a/scss/components/pageAccor/_accorNavbar.scss
+++ b/scss/components/pageAccor/_accorNavbar.scss
@@ -302,7 +302,7 @@ $expandedSearchBarWidth: min(763px, 50vw);
   .phone-bar__container {
     .phone__container {
       height: 12px;
-
+      background-color: white;
       // padding: 0;
       position: static;
       opacity: 1;
